Add java-11 Compat version.